; ModuleID = '/home/carl/AnghaBench/openssl/test/testutil/extr_format_output.c_test_fail_bignum_message.c'
source_filename = "/home/carl/AnghaBench/openssl/test/testutil/extr_format_output.c_test_fail_bignum_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_fail_bignum_message(i8* %0, i8* %1, i32 %2, i8* %3, i8* %4, i8* %5, i8* %6, i32* %7, i32* %8) #0 {
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  store i8* %0, i8** %10, align 8
  store i8* %1, i8** %11, align 8
  store i32 %2, i32* %12, align 4
  store i8* %3, i8** %13, align 8
  store i8* %4, i8** %14, align 8
  store i8* %5, i8** %15, align 8
  store i8* %6, i8** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32* %8, i32** %18, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i8*, i8** %11, align 8
  %21 = load i32, i32* %12, align 4
  %22 = load i8*, i8** %13, align 8
  %23 = load i8*, i8** %14, align 8
  %24 = load i8*, i8** %15, align 8
  %25 = load i8*, i8** %16, align 8
  %26 = load i32*, i32** %17, align 8
  %27 = load i32*, i32** %18, align 8
  %28 = call i32 @test_fail_bignum_common(i8* %19, i8* %20, i32 %21, i8* %22, i8* %23, i8* %24, i8* %25, i32* %26, i32* %27)
  %29 = call i32 @test_printf_stderr(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i32 @test_fail_bignum_common(i8*, i8*, i32, i8*, i8*, i8*, i8*, i32*, i32*) #1

declare dso_local i32 @test_printf_stderr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
